--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -15,7 +15,7 @@
     {% block head %}
     {% endblock %}
 </head>
-<body>
+<body class="layout-base">
     <div class="container">
         {% block menu %}
         <div class="pure-menu pure-menu-horizontal">
