--- a/app/assets/styles/site.css
+++ b/app/assets/styles/site.css
@@ -97,9 +97,8 @@ table .actions {
 }
 
 .state {
-    display: inline-block;
     padding: 10px;
-    margin-left: 10px;
+    margin: 5px 0;
     border-radius: 5px;
 }
 
