--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -40,7 +40,7 @@
 
         {% with messages = get_flashed_messages(with_categories=true) %}
         {% if messages %}
-        <ul class="flash">
+        <ul class="flashes">
             {% for category, message in messages %}
             <li class="{{ category }}">{{ message }}</li>
             {% endfor %}
