Multi-tenant changes
Still a little more to do on filtering the records in the API.
Users are nicely filtered now. Gateway and (new) network entity also
fleshed out.

--- a/app/users/templates/users/index.html
+++ b/app/users/templates/users/index.html
@@ -12,12 +12,12 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='scripts/interactive.js') }}"></script>
-<script src="{{ url_for('users.static', filename='store.js') }}"></script>
 <script src="{{ url_for('users.static', filename='users.tag') }}" type="riot/tag"></script>
+<script src="{{ url_for('users.static', filename='store.js') }}"></script>
 
 <script>
 Zepto(function($) {
-    riot.mount('users', { users: {{ users|tojson }} });
+    riot.mount('users');
 });
 </script>
 {% endblock %}
