Normalize gw_id to gateway_id where possible and fix a few bugs

--- a/app/wifidog/templates/wifidog/login.html
+++ b/app/wifidog/templates/wifidog/login.html
@@ -9,7 +9,7 @@
         <form method="post" action="{{ url_for('wifidog.login') }}" class="pure-form pure-form-stacked">
             {{ form.gw_address | safe }}
             {{ form.gw_port | safe }}
-            {{ form.gw_id | safe }}
+            {{ form.gateway_id | safe }}
             {{ form.mac | safe }}
             {{ form.url | safe }}
 
