--- a/app/gateways/templates/gateways/index.html
+++ b/app/gateways/templates/gateways/index.html
@@ -12,12 +12,12 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='scripts/interactive.js') }}"></script>
-<script src="{{ url_for('gateways.static', filename='store.js') }}"></script>
 <script src="{{ url_for('gateways.static', filename='gateways.tag') }}" type="riot/tag"></script>
+<script src="{{ url_for('gateways.static', filename='store.js') }}"></script>
 
 <script>
 Zepto(function($) {
-    riot.mount('gateways', { gateways: {{ gateways|tojson }} });
+    riot.mount('gateways');
 });
 </script>
 {% endblock %}
