--- a/app/networks/templates/networks/index.html
+++ b/app/networks/templates/networks/index.html
@@ -12,12 +12,12 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='scripts/interactive.js') }}"></script>
-<script src="{{ url_for('networks.static', filename='store.js') }}"></script>
 <script src="{{ url_for('networks.static', filename='networks.tag') }}" type="riot/tag"></script>
+<script src="{{ url_for('networks.static', filename='store.js') }}"></script>
 
 <script>
 Zepto(function($) {
-    riot.mount('networks', { networks: {{ networks|tojson }} });
+    riot.mount('networks');
 });
 </script>
 {% endblock %}
