--- a/app/templates/vouchers/index.html
+++ b/app/templates/vouchers/index.html
@@ -2,22 +2,22 @@
 
 {% block head %}
 <!--[if lt IE 9]>
-<script>html5.addElements('gateways')</script>
+<script>html5.addElements('vouchers')</script>
 <![endif]-->
 {% endblock %}
 
 {% block content %}
-<gateways></gateways>
+<vouchers></vouchers>
 {% endblock %}
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='scripts/interactive.js') }}"></script>
-<script src="{{ url_for('gateways.static', filename='gateways.tag') }}" type="riot/tag"></script>
-<script src="{{ url_for('gateways.static', filename='store.js') }}"></script>
+<script src="{{ url_for('static', filename='tags/vouchers.tag') }}" type="riot/tag"></script>
+<script src="{{ url_for('static', filename='stores/vouchers.js') }}"></script>
 
 <script>
 Zepto(function($) {
-    riot.mount('gateways');
+    riot.mount('vouchers');
 });
 </script>
 {% endblock %}
