--- a/app/templates/networks/index.html
+++ b/app/templates/networks/index.html
@@ -13,8 +13,8 @@
 {% block scripts %}
 <script src="{{ url_for('static', filename='scripts/interactive.js') }}"></script>
 <script src="{{ url_for('static', filename='tags/modal.tag') }}" type="riot/tag"></script>
-<script src="{{ url_for('networks.static', filename='networks.tag') }}" type="riot/tag"></script>
-<script src="{{ url_for('networks.static', filename='store.js') }}"></script>
+<script src="{{ url_for('static', filename='tags/networks.tag') }}" type="riot/tag"></script>
+<script src="{{ url_for('static', filename='stores/networks.js') }}"></script>
 
 <script>
 Zepto(function($) {
