--- a/app/templates/layouts/admin.html
+++ b/app/templates/layouts/admin.html
@@ -39,15 +39,7 @@
         </div>
         {% endblock %}
 
-        {% with messages = get_flashed_messages(with_categories=true) %}
-        {% if messages %}
-        <ul class="flashes">
-            {% for category, message in messages %}
-            <li class="{{ category }}">{{ message }}</li>
-            {% endfor %}
-        </ul>
-        {% endif %}
-        {% endwith %}
+        {% include 'layouts/flashes.html' %}
 
         {% block content %}
         {% endblock %}
