--- a/app/templates/gateways/index.html
+++ b/app/templates/gateways/index.html
@@ -12,5 +12,6 @@
 
 {% block scripts %}
 <script src="{{ url_for('static', filename='tags/gateways.tag') }}" type="riot/tag"></script>
+<script src="{{ url_for('static', filename='stores/networks.js') }}"></script>
 <script src="{{ url_for('static', filename='stores/gateways.js') }}"></script>
 {% endblock %}
