--- a/app/styles/site.scss
+++ b/app/styles/site.scss
@@ -58,6 +58,10 @@ table .actions {
     text-align: right;
 }
 
+th, td {
+    vertical-align: top;
+}
+
 .flashes {
     padding: 0;
     margin-bottom: 12px;
