Nice portal page with a FB like widget and link to home page

--- a/app/styles/site.scss
+++ b/app/styles/site.scss
@@ -53,6 +53,15 @@ h1 {
     }
 }
 
+.panel-portal {
+    .panel-body {
+        text-align: center;
+    }
+    .fb-like {
+        margin-top: 12px;
+    }
+}
+
 table .actions {
     width: 30%;
     text-align: right;
