--- a/app/templates/layouts/admin.html
+++ b/app/templates/layouts/admin.html
@@ -53,6 +53,7 @@
 
     <script src="{{ url_for('static', filename='scripts/interactive.js') }}"></script>
     <script src="{{ url_for('static', filename='stores/currentuser.js') }}"></script>
+    <script src="{{ url_for('static', filename='tags/raw.tag') }}" type="riot/tag"></script>
     <script src="{{ url_for('static', filename='tags/modal.tag') }}" type="riot/tag"></script>
 
     {% block scripts %}
