--- a/app/templates/layouts/admin.html
+++ b/app/templates/layouts/admin.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Flask Auth</title>
+    <title>Wifidog Auth</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
