--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -2,7 +2,7 @@
 {% from 'helpers/form.html' import render_field %}
 
 {% block content %}
-<div class="panel panel-login">
+<div class="panel panel-voucher">
     <h1 class="panel-title">
         {% include 'layouts/flashes.html' %}
     </h1>
