--- a/app/styles/site.scss
+++ b/app/styles/site.scss
@@ -78,7 +78,6 @@ th, td {
     li {
         display: inline-block;
         padding: 10px;
-        margin-left: 10px;
         border-radius: 5px;
         box-shadow: 0 2px 0 rgba(0, 0, 0, 0.25);
     }
@@ -105,6 +104,14 @@ th, td {
         color: #ffffff;
         background-color: #ff0000;
         border-color: #c43d3d;
+    }
+}
+
+.panel-voucher .flashes {
+    .success {
+        font-size: 150%;
+        font-family: Georgia, Times, "Times New Roman", serif;
+        font-weight: normal;
     }
 }
 
