Add Server Side Events with Web Notification API for push

--- a/app/templates/layouts/admin.html
+++ b/app/templates/layouts/admin.html
@@ -63,6 +63,14 @@
     Zepto(function($) {
         riot.mount('*');
         RiotControl.trigger('currentuser.load');
+
+        setupNotifications();
+
+        var eventSource = new EventSource('{{ url_for('app.push') }}');
+
+        eventSource.onmessage = function(response) {
+            new Notification(response.data);
+        };
     });
     </script>
 </body>
