--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles/screen.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='styles/screen.min.css') }}" />
 
     <!--[if lt IE 9]>
     <script src="{{ url_for('static', filename='scripts/ie.js') }}"></script>
