--- a/app/templates/layouts/admin.html
+++ b/app/templates/layouts/admin.html
@@ -52,6 +52,7 @@
     </footer>
 
     <script src="{{ url_for('static', filename='scripts/admin.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='tags/raw.tag') }}" type="riot/tag"></script>
     <script src="{{ url_for('static', filename='tags/modal.tag') }}" type="riot/tag"></script>
 
     {% block scripts %}
