UI changes, bugfixes on modals, cancel works correctly

--- a/app/templates/broadcast.html
+++ b/app/templates/broadcast.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/plain.html' %}
+{% extends 'layouts/default.html' %}
 {% from 'helpers/form.html' import render_field %}
 
 {% block content %}
