--- a/app/templates/networks/edit.html
+++ b/app/templates/networks/edit.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/admin.html' %}
+{% extends 'layouts/default.html' %}
 {% from 'helpers/form.html' import render_group %}
 
 {% block content %}
