--- a/app/styles/site.scss
+++ b/app/styles/site.scss
@@ -23,36 +23,6 @@ h1 {
     font-size: x-large;
 }
 
-.layout-base {
-    .container {
-        width: 1024px;
-        margin: 0 auto;
-    }
-}
-
-.layout-login {
-    background-color: #1f8dd6;
-
-    .panel {
-        border-radius: 10px;
-        padding: 20px;
-        background-color: #ffffff;
-        box-shadow: 2px 2px 1px #333333;
-        margin: 20px auto;
-        width: 300px;
-
-        .panel-title {
-            text-align: center;
-        }
-    }
-
-    & > footer {
-        color: #ffffff;
-        text-align: center;
-        padding: 20px;
-    }
-}
-
 .panel-portal {
     .panel-title {
         text-align: center;
@@ -67,6 +37,10 @@ table .actions {
     text-align: right;
 }
 
+.modal .actions {
+    padding: 12px 0;
+}
+
 th, td {
     vertical-align: top;
 }
@@ -75,7 +49,7 @@ th, td {
     padding: 0;
     margin-bottom: 12px;
 
-    li {
+    li, .time-left {
         display: inline-block;
         padding: 10px;
         border-radius: 5px;
@@ -88,7 +62,7 @@ th, td {
         border-color: #3b8eb5;
     }
 
-    .success, .info {
+    .success, .info, .time-left {
         color: #ffffff;
         background-color: #00b900;
         border-color: #55a12c;
@@ -128,4 +102,8 @@ th, td {
 .state-valid {
     color: #ffffff;
     background-color: #00b900;
+}
+
+#menu .info {
+    padding: 0.6em;
 }
