--- a/app/templates/wifidog/login.html
+++ b/app/templates/wifidog/login.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/plain.html' %}
+{% extends 'layouts/default.html' %}
 {% from 'helpers/form.html' import render_field %}
 
 {% block content %}
