--- a/app/styles/side-menu.scss
+++ b/app/styles/side-menu.scss
@@ -128,11 +128,6 @@ body {
 }
 
 /*
-The button to open/close the Menu is custom-made and not part of Pure. Here's
-how it works:
- */
-
-/*
 `.menu-link` represents the responsive menu toggle that shows/hides on
 small screens.
  */
@@ -141,47 +136,19 @@ small screens.
     display: block; /* show this only on small screens */
     top: 0;
     left: 0; /* "#menu width" */
-    background: #000;
-    background: rgba(0,0,0,0.7);
     font-size: 10px; /* change this value to increase/decrease button size */
     z-index: 10;
-    width: 2em;
     height: auto;
-    padding: 2.1em 1.6em;
+    padding: 1.6em;
 
     &:hover,
     &:focus {
         background: #000;
     }
-
-    span {
-        position: relative;
-        display: block;
-    }
-
-    span,
-    span:before,
-    span:after {
-        background-color: #fff;
-        width: 100%;
-        height: 0.2em;
-    }
-
-    span:before,
-    span:after {
-        position: absolute;
-        margin-top: -0.6em;
-        content: " ";
-    }
-
-    span:after {
-        margin-top: 0.6em;
-    }
 }
 
 // Hides the menu at `56em`, but modify this based on your app's needs.
 @media (min-width: 56em) {
-
     .header,
     .content {
         padding-left: 2em;
