--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -19,8 +19,7 @@
 <body class="layout-default">
     <div id="layout">
         <a href="#menu" id="menuLink" class="menu-link">
-            <!-- Hamburger icon -->
-            <span></span>
+            <i class="oi" data-glyph="menu" title="Menu" aria-hidden="true"></i>
         </a>
 
         <div id="menu">
