Add page titles, template DB for tests, and start writing tests

--- a/app/templates/networks/edit.html
+++ b/app/templates/networks/edit.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/default.html' %}
 {% from 'helpers/form.html' import render_group %}
 
+{% set title = 'Vouchers' %}
+
 {% block content %}
 <h1>{{ network.title }}</h1>
 
