--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -1,6 +1,7 @@
 {% extends 'layouts/default.html' %}
-
 {% from "helpers/form.html" import render_field %}
+
+{% set title = 'Login' %}
 
 {% block content %}
 <div class="content">
@@ -30,5 +31,4 @@
         </div>
     </div>
 </div>
-
 {% endblock %}
