--- a/app/templates/users/index.html
+++ b/app/templates/users/index.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/default.html' %}
 
+{% set title = 'Users' %}
+
 {% block head %}
 <!--[if lt IE 9]>
 <script>html5.addElements('users')</script>
