--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/default.html' %}
 {% from 'helpers/form.html' import render_field %}
 
+{% set title = 'New Voucher' %}
+
 {% block content %}
 <div class="content">
     <div class="panel panel-voucher">
