--- a/app/templates/wifidog/login.html
+++ b/app/templates/wifidog/login.html
@@ -1,6 +1,8 @@
 {% extends 'layouts/default.html' %}
 {% from 'helpers/form.html' import render_field %}
 
+{% set title = 'Voucher Login' %}
+
 {% block content %}
 <div class="panel panel-login">
     <h1 class="panel-title">Login</h1>
