--- a/app/templates/wifidog/portal.html
+++ b/app/templates/wifidog/portal.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/default.html' %}
 
+{% set title = gateway.title %}
+
 {% block content %}
 {% include 'wifidog/_facebook.html' %}
 
