--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Wifidog Auth</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta charset="UTF-8"/>
+<title>{{ title }} - Wifidog Auth</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
 
     <link rel="stylesheet" href="{{ url_for('static', filename='styles/screen.min.css') }}" />
 
