--- a/app/templates/networks/index.html
+++ b/app/templates/networks/index.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/default.html' %}
 
+{% set title = 'Networks' %}
+
 {% block head %}
 <!--[if lt IE 9]>
 <script>html5.addElements('networks')</script>
