--- a/app/templates/vouchers/index.html
+++ b/app/templates/vouchers/index.html
@@ -1,5 +1,7 @@
 {% extends 'layouts/default.html' %}
 
+{% set title = 'Vouchers' %}
+
 {% block head %}
 <!--[if lt IE 9]>
 <script>html5.addElements('vouchers')</script>
