--- a/app/templates/wifidog/login.html
+++ b/app/templates/wifidog/login.html
@@ -9,6 +9,8 @@
     <h1 class="panel-title">Login</h1>
 
     <div class="panel-body">
+        {% include 'layouts/flashes.html' %}
+
         <form method="post" action="{{ url_for('.wifidog_login') }}" class="pure-form pure-form-stacked">
             {{ form.csrf_token }}
             {{ form.gw_address | safe }}
@@ -19,6 +21,7 @@
 
             <fieldset class="pure-group">
                 {{ render_field(form.voucher, class='pure-input-1', placeholder='Voucher', required=True) }}
+                <!--{{ render_field(form.email, class='pure-input-1', placeholder='Email', required=False) }}-->
             </fieldset>
 
             <button type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
