--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -6,7 +6,7 @@
 {% block content %}
 <div class="content">
     <div class="panel panel-voucher">
-        <h1 class="panel-title">
+        <h1 class="panel-title voucher-id">
             {{ request.args.get('id') }}
         </h1>
 
