Unify handling of flashes and some fixes for webdriver tests

--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -54,6 +54,8 @@
         </div>
 
         <div id="main">
+            {% include 'layouts/flashes.html' %}
+
             {% block content %}
             {% endblock %}
         </div>
