--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -54,7 +54,9 @@
         </div>
 
         <div id="main">
+            <div class="content">
             {% include 'layouts/flashes.html' %}
+            </div>
 
             {% block content %}
             {% endblock %}
