--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -4,6 +4,10 @@
 {% set title = 'New Voucher' %}
 
 {% block content %}
+<div class="header">
+    <h1>New Voucher</h1>
+</div>
+
 <div class="content">
     <div class="panel panel-voucher">
         <h1 class="panel-title voucher-id">
