--- a/app/styles/site.scss
+++ b/app/styles/site.scss
@@ -23,10 +23,6 @@ body {
     }
 }
 
-h1 {
-    font-size: x-large;
-}
-
 button {
     margin-right: 6px;
 }
@@ -145,7 +141,7 @@ th, td {
 
 // The content `<div>` is where all your content goes.
 .content {
-    padding: 0 2.5em;
+    padding: 0 3em;
     max-width: $content-width;
     margin-bottom: 6px;
     line-height: 1.6em;
@@ -154,12 +150,13 @@ th, td {
 .header {
     margin: 0;
     color: #333;
-    padding: 0 2.5em 0;
+    padding: 0 3em 0;
 
     h1 {
         margin: 0.2em 0;
-        font-size: 2em;
+        font-size: 1.95em;
         font-weight: 300;
+        border-bottom: 1px solid #cbcbcb;
     }
 
     h2 {
