--- a/app/styles/site.scss
+++ b/app/styles/site.scss
@@ -86,6 +86,8 @@ th, td {
 
 .voucher-id {
     font-family: Georgia, Times, "Times New Roman", serif;
+    font-size: 200%;
+    margin: 3px 0 6px;
 }
 
 .state {
@@ -153,7 +155,7 @@ th, td {
     padding: 0 3em 0;
 
     h1 {
-        margin: 0.2em 0;
+        margin: 0.2em 0 0.4em;
         font-size: 1.95em;
         font-weight: 300;
         border-bottom: 1px solid #cbcbcb;
