--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -10,9 +10,9 @@
 
 <div class="content">
     <div class="panel panel-voucher">
-        <h1 class="panel-title voucher-id">
+        <div class="voucher-id">
             {{ request.args.get('id') }}
-        </h1>
+        </div>
 
         <div class="panel-body">
             <form method="post" class="pure-form pure-form-stacked">
