--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -24,7 +24,7 @@
                     </label>
                 </fieldset>
 
-                <button type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
+                <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
             </form>
 
             {% include "security/_menu.html" %}
