--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -17,6 +17,8 @@
 </head>
 
 <body class="layout-default">
+    {% include 'layouts/gtm.html' %}
+
     <div id="layout">
         <a href="#menu" id="menuLink" class="menu-link">
             <i class="oi" data-glyph="menu" title="Menu" aria-hidden="true"></i>
