--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -4,31 +4,29 @@
 {% set title = 'Login' %}
 
 {% block content %}
+<div class="header">
+    <h1>Login</h1>
+</div>
+
 <div class="content">
-    <div class="panel panel-login">
-        <h1 class="panel-title">Login</h1>
+    {% include "security/_messages.html" %}
 
-        <div class="panel-body">
-            {% include "security/_messages.html" %}
+    <form action="{{ url_for_security('login') }}" method="POST" class="pure-form pure-form-stacked" name="login_user_form">
+        {{ login_user_form.next | safe }}
+        {{ login_user_form.hidden_tag() }}
+        <fieldset>
+            {{ render_field(login_user_form.email, class='pure-input-1', placeholder='Email') }}
+            {{ render_field(login_user_form.password, class='pure-input-1', placeholder='Password') }}
 
-            <form action="{{ url_for_security('login') }}" method="POST" class="pure-form pure-form-stacked" name="login_user_form">
-                {{ login_user_form.next | safe }}
-                {{ login_user_form.hidden_tag() }}
-                <fieldset>
-                    {{ render_field(login_user_form.email, class='pure-input-1', placeholder='Email') }}
-                    {{ render_field(login_user_form.password, class='pure-input-1', placeholder='Password') }}
+            <label for="remember" class="pure-checkbox">
+                <input id="remember" type="checkbox" name="remember" value="y" />
+                Remember Me
+            </label>
+        </fieldset>
 
-                    <label for="remember" class="pure-checkbox">
-                        <input id="remember" type="checkbox" name="remember" value="y" />
-                        Remember Me
-                    </label>
-                </fieldset>
+        <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
+    </form>
 
-                <button id="submit" type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
-            </form>
-
-            {% include "security/_menu.html" %}
-        </div>
-    </div>
+    {% include "security/_menu.html" %}
 </div>
 {% endblock %}
