Add GTM and use signals for GA events

--- a/app/templates/layouts/default.html
+++ b/app/templates/layouts/default.html
@@ -56,9 +56,11 @@
         </div>
 
         <div id="main">
+            {% if show_flash != False %}
             <div class="content">
             {% include 'layouts/flashes.html' %}
             </div>
+            {% endif %}
 
             {% block content %}
             {% endblock %}
