--- a/app/templates/security/login_user.html
+++ b/app/templates/security/login_user.html
@@ -2,6 +2,7 @@
 {% from "helpers/form.html" import render_field %}
 
 {% set title = 'Login' %}
+{% set show_flash = False %}
 
 {% block content %}
 <div class="header">
