--- a/app/templates/wifidog/login.html
+++ b/app/templates/wifidog/login.html
@@ -19,6 +19,7 @@
 
         <fieldset class="pure-group">
             {{ render_field(form.voucher, class='pure-input-1', placeholder='Voucher', required=True) }}
+            {{ render_field(form.name, class='pure-input-1', placeholder='Name') }}
         </fieldset>
 
         <button type="submit" class="pure-input-1 pure-button pure-button-primary">Go</button>
