Remove instance-specific info from repository

--- a/app/templates/layouts/gtm.html
+++ b/app/templates/layouts/gtm.html
@@ -8,7 +8,7 @@ dataLayer = [
 
 <!-- Google Tag Manager -->
 <noscript><iframe
-    src="//www.googletagmanager.com/ns.html?id=GTM-P8M3S3"
+        src="//www.googletagmanager.com/ns.html?id={{ config['GTM_CONTAINER_ID'] }}"
     height="0" width="0"
     style="display:none;visibility:hidden">
 </iframe></noscript>
@@ -16,6 +16,6 @@ dataLayer = [
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-P8M3S3');
+})(window,document,'script','dataLayer','{{ config['GTM_CONTAINER_ID'] }}');
 </script>
 <!-- End Google Tag Manager -->
