--- a/app/templates/vouchers/new.html
+++ b/app/templates/vouchers/new.html
@@ -11,7 +11,7 @@
 <div class="content">
     <div class="panel panel-voucher">
         <div class="voucher-id">
-            {{ request.args.get('id') }}
+            {{ request.args.get('code') }}
         </div>
 
         <div class="panel-body">
