--- a/app/templates/wifidog/login.html
+++ b/app/templates/wifidog/login.html
@@ -20,7 +20,7 @@
         {{ form.url | safe }}
 
         <fieldset>
-            {{ render_group(form.voucher, required=True) }}
+            {{ render_group(form.voucher_code, required=True) }}
             {{ render_group(form.name) }}
             <div class="pure-controls">
                 <button type="submit" class="pure-button pure-button-primary">Go</button>
